Update and rename README.md to README.html

--- a/README.html
+++ b/README.html
@@ -60,4 +60,9 @@
             <li><span class="emoji">🌱</span> I’m currently learning: React, Fullstack Development + Cyber Security</li>
             <li><span class="emoji">📫</span> How to reach me <a href="mailto:alex404hm@alexander-holm.com">alex404hm@alexander-holm.com</a></li>
             <li><span class="emoji">😄</span> Pronouns: He/Him</li>
-            <li><span class="emoji">⚡</span> Fun f
+            <li><span class="emoji">⚡</span> Fun fact: I'm a Nerd</li>
+        </ul>
+        <p class="fun-fact">Did you know? Nerds make the best developers! 😉</p>
+    </div>
+</body>
+</html>
